<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>drools-engine-core</artifactId>
    <name>Drools Engine Core</name>

    <parent>
        <groupId>com.biit</groupId>
        <artifactId>drools-engine</artifactId>
        <version>1.2.1-SNAPSHOT</version>
    </parent>

    <properties>
        <main.basedir>${basedir}/..</main.basedir>
    </properties>

    <dependencies>
        <!-- Drools Engine Interfaces -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>drools-engine-interfaces</artifactId>
            <version>${project.version}</version>
            <type>jar</type>
        </dependency>
        <!-- Drools -->
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-core</artifactId>
            <version>${drools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-compiler</artifactId>
            <version>${drools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-mvel</artifactId>
            <version>${drools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.drools</groupId>
            <artifactId>drools-xml-support</artifactId>
            <version>${drools.version}</version>
        </dependency>
        <!-- Basic From Structure -->
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>form-structure</artifactId>
        </dependency>
        <!-- Submitted Form -->
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>form-structure-submitted</artifactId>
        </dependency>
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>rest-generic-client</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Drools Form -->
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>form-structure-drools</artifactId>
        </dependency>
        <!-- Testing -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jaxen</groupId>
            <artifactId>jaxen</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Orbeon form -->
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>form-structure-orbeon</artifactId>
        </dependency>
        <!-- Plugin Manager -->
        <dependency>
            <groupId>com.biit</groupId>
            <artifactId>plugin-manager-core</artifactId>
        </dependency>
        <!-- AspectJ -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <!-- if this is not excluded and 'spring-boot-starter-log4j2' enabled,
                testng causes a 'Cannot instantiate class' for all tests -->
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- JBOSS repository -->
    <repositories>
        <repository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Repository Group</name>
            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <complianceLevel>16.0</complianceLevel>
                    <source>16.0</source>
                    <target>16.0</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
